App/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-project
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
