App/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: bgd
  name: bgd
  namespace: demo-project
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: bgd
    weight: 100
